@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype ortho
skinparam classAttributeIconSize 0
'left to right direction

class AssignVehicleToTaskAgendaUI{
}

class AgendaController {
    - AgendaRepository agendaRepository
    - VehicleRepository vehicleRepository

    + assignVehicle(AgendaEntry agendaTask, Vehicle vehicle)
    + String getResponsible()
    + List<ToDoEntry> getToDoEntryListForResponsible()
    + List <Vehicle> getAvailableVehicles()
}

class AgendaRepository {
    - List<AgendaEntry> agenda

    + List<AgendaEntry> getAgendaEntriesForResponsible(String responsibleEmail)
    + assignVehicle(AgendaEntry agendaTask, Vehicle vehicle)
}

class ToDoListRepository {
    - List<ToDoEntry> toDoList
}

class VehicleRepository {
    - List<Vehicle> vehicleList
    + List<Vehicle> getListVehicle()
}
class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getSkillRepository()
}


AssignVehicleToTaskAgendaUI ..> AgendaController
AgendaController ..> AgendaRepository : agendaRepository
AgendaController ..> VehicleRepository : vehicleRepository
AgendaRepository ..> ToDoListRepository : toDoListRepository
AgendaRepository ..> VehicleRepository : vehicleRepository
Repositories -> Repositories : instance
Repositories  --> "1 " VehicleRepository
Repositories  --> "1 " ToDoListRepository
Repositories  --> "1 " AgendaRepository
AgendaController ..> Repositories : Repositories

@enduml
